cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description:
  Cloudformation template for seckinkitaplar.com copied from Kittens Carousel Static Website. Which is downloaded from Github and deployed on Apache on EC2.
        
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HHTP for Apache #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: My first Sec Group
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0c94855ba95c71c99
      InstanceType: t2.micro
      KeyName: yss
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
          #! /bin/bash
          yum update -y
          yum install httpd -y
          cd /var/www/html/
          wget https://github.com/yavuz72/seckinkitaplar/blob/main/index.html
          wget https://github.com/yavuz72/seckinkitaplar/blob/main/book0.jpg
          wget https://github.com/yavuz72/seckinkitaplar/blob/main/book1.jpg
          wget https://github.com/yavuz72/seckinkitaplar/blob/main/book2.jpg
          systemctl start httpd
          systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Seckinkitaplar URL
